@@ -16,6 +16,7 @@ CHANGELOG Roundcube Webmail
 - newmail_notifier: Refactor desktop notifications
 - Fix so contactlist_fields option can be set via config file
 - Fix so SPECIAL-USE assignments are forced only until user sets special folders (#4782)
+- Fix performance in reverting order of THREAD result
 
 RELEASE 1.1.4
 -------------
